fix mobile footer spacing

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -93,6 +93,8 @@ nav a {
   }
   .mobile-menu.open {
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
 
@@ -162,4 +164,25 @@ footer a {
   top: 25%;
   left: 50%;
   transform: translateX(-50%);
+  z-index: -999;
+}
+@media(max-width:768px){
+  .footer-inner-container{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+  #fw3{
+    position: absolute;
+    bottom: 5%;
+    margin-left: 0;
+  }
+  #footer-img{
+    width: 80%;
+  }
+  .footer-bottom{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 0;
+  }
 }
